--- a/archivist/src/main/resources/templates/pipeline.html
+++ b/archivist/src/main/resources/templates/pipeline.html
@@ -2,7 +2,8 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout" xmlns:th="http://www.thymeleaf.org">
 <head>
-
+    <script src="/assets/js/Sortable.min.js"></script>
+    <script src="/assets/js/spin.min.js"></script>
 </head>
 <body>
 
@@ -12,23 +13,257 @@
     <div class="wrapper">
         <br/>
 
-    <div class="row">
+    <div class="row" style="padding: 5px">
         <div class="col-md-4">
-            <ul class="list-group">
-                <button type="button" class="list-group-item" th:text="${proc.className}" th:each="proc: ${pipeline.processors}"/>
-            </ul>
-        </div>
 
+            <div class="btn-group" style="padding-bottom: 10px">
+                <button id="btn-save" type="button" class="btn btn-default">Save</button>
+                <button id="btn-remove" type="button" class="btn btn-default">Remove</button>
+                <button type="button" class="btn btn-default">Processors</button>
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <ul id="proc-select" class="dropdown-menu">
+                    <li th:each="processor: ${processors}">
+                        <a class="newProcessor" href="#" th:attr="data-cn=${processor.name}" th:text="${processor.shortName}"></a>
+                    </li>
+                </ul>
+            </div>
+            <ul id="proc-list" class="list-group">
+                <button type="button" th:text="${proc.className}" th:attr="data-args=${proc.args}" class="list-group-item processor" th:each="proc: ${pipeline.processors}"/>
+            </ul>
+        <div class="alert alert-success" id="success-alert">
+            <button type="button" class="close" data-dismiss="alert">x</button>
+            Pipeline has been updated.
+        </div>
+        <div class="alert alert-danger" id="failure-alert">
+            <button type="button" class="close" data-dismiss="alert">x</button>
+        </div>
         </div>
         <div class="col-md-8">
-            <form class="form-inline">
-            <div class="form-group">
-                <label for="args">Comment:</label>
-                <textarea class="form-control" rows="15" id="args"></textarea>
-            </div>
-            </form>
+            <!-- Nav tabs -->
+
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#tab-props" role="tab" data-toggle="tab">Properties</a></li>
+                <li role="presentation"><a href="#tab-args" role="tab" data-toggle="tab">Arguments</a></li>
+                <li role="presentation"><a href="#tab-run" role="tab" data-toggle="tab">Run</a></li>
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="tab-props">
+                    <input type="hidden" th:field="*{pipeline.id}"/>
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" th:field="*{pipeline.name}" class="form-control" id="name" required="true"/>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="type">Type:</label>
+                        <input type="text" th:field="*{pipeline.type}" class="form-control" id="type" required="true"/>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <input type="text" th:field="*{pipeline.description}" class="form-control" id="description" required="true"/>
+
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="tab-args">
+                    <br/>
+                    <div id="args-group" class="form-group">
+                        <textarea class="form-control" rows="15" id="args"></textarea>
+                    </div>
+                    <div id="docs"/>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="tab-run">
+                    <br/>
+                    <form class="form-horizontal" id="runForm">
+                    <div class="form-group">
+                        <label for="file" class="col-sm-2 control-label">File:</label>
+                        <div class="col-sm-10">
+                            <input name="file" type="text" class="form-control" rows="15" id="file"></input>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-2">
+                            <span id="spin-target"></span>
+                        </div>
+                        <div class="col-sm-10">
+                            <button type="button" id="btn-run" class="btn btn-danger">Run</button>
+                        </div>
+                    </div>
+                    </form>
+                    <div id="" style="overflow-y: scroll; height:500px;">
+                        <pre id="response"></pre>
+                    </div>
+                </div>
         </div>
     </div>
+    </div>
+    </div>
+
+    <script th:inline="javascript" type="text/javascript">
+        //<![CDATA[
+        // Simple list
+        function isJson(str) {
+            try {
+                JSON.parse(str);
+            } catch (e) {
+                return false;
+            }
+            return true;
+        }
+
+        function save() {
+            hide_all_alerts();
+
+            var id = $("#id").val();
+            var doc = {
+                "processors": get_pipeline(),
+                "name": $("#name").val(),
+                "description": $("#description").val(),
+                "type": $("#type").val()
+            }
+
+            $.ajax({
+                url: "/api/v1/pipelines/" + id,
+                method: "put",
+                data: JSON.stringify(doc),
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+                    var alert = $("#success-alert");
+                    alert.alert();
+                    alert.fadeTo(2000, 500).slideUp(500, function() {
+                        alert.slideUp(500);
+                    });
+                },
+                complete: function(data, status) {
+                    if (status == "error") {
+                        var message = JSON.parse(data.responseText)["message"];
+                        var alert = $("#failure-alert");
+                        $("#failure-alert span").remove();
+                        $("#failure-alert button").after("<span>" + message + "</span>");
+                        alert.alert();
+                        alert.fadeTo(2000, 500);
+                    }
+                }
+            });
+        }
+
+        function hide_all_alerts() {
+            $("#success-alert").hide();
+            $("#failure-alert").hide();
+        }
+
+        function get_pipeline() {
+            var pipeline = [];
+            $("#proc-list").children("button").each(function(idx, itm) {
+                ref = {
+                    "className": $(itm).text(),
+                    "args": JSON.parse($(itm).attr("data-args"))
+                }
+                pipeline.push(ref);
+            });
+            return pipeline;
+        }
+
+        function get_selected_proc() {
+            return $("#proc-list").find(".list-group-item-success");
+        }
+
+        function validate_args() {
+            var args = $("#args").val();
+            if (isJson(args)) {
+                return true;
+            }
+            else {
+                return false;
+            }
+        }
+        $(document).ready(function() {
+            var procs = document.getElementById("proc-list");
+            Sortable.create(procs, {
+                "draggable": ".list-group-item",
+                "filter:": ".js-remove",
+                onFilter: function (evt) {
+                    console.log(evt);
+                    evt.item.parentNode.removeChild(evt.item);
+                }
+                });
+
+            $(".dropdown-toggle").dropdown();
+            hide_all_alerts();
+
+            $(document).on("click", "#btn-save", function(e) {
+                save();
+            });
+
+            $(document).on("click", "#btn-run", function(e) {
+
+                var spinTarget = document.getElementById("spin-target")
+                var spinner = new Spinner().spin(spinTarget);
+
+                var path = $("#file").val();
+                var pipeline = get_pipeline();
+                var btn = $(this);
+                btn.prop("disabled", true);
+
+                $.ajax({
+                    url: "/api/v1/imports/_debug",
+                    method: "post",
+                    data: JSON.stringify({"path": path, "pipeline": pipeline}),
+                    dataType: "json",
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data) {
+                        $("#response").text(JSON.stringify(data, null, 2));
+                        spinner.stop();
+                        btn.prop("disabled", false);
+                    },
+                    error: function (err) {
+                        $("#response").text(JSON.stringify(err, null, 2));
+                        spinner.stop();
+                        btn.prop("disabled", false);
+                    }
+                });
+            });
+
+            $("#args").keyup(function() {
+                var keyed = $(this).val();
+                if (validate_args()) {
+                    get_selected_proc().attr("data-args", keyed);
+                    $("#args-group").removeClass("has-error");
+                }
+                else {
+                    $("#args-group").addClass("has-error");
+                }
+            });
+
+            $(document).on("click", "#proc-list .processor", function(e) {
+                $('.nav-tabs a[href="#tab-args"]').tab('show');
+                var selected = $(this);
+                selected.siblings().removeClass("list-group-item-success").end();
+                selected.addClass("list-group-item-success");
+                $("#args").val(selected.attr("data-args"));
+                $("#docs").load("/gui/docs/processor/" + selected.text());
+
+                e.preventDefault();
+            });
+
+            $(document).on("click", "#btn-remove", function(e) {
+                var selected = get_selected_proc();
+                selected.remove();
+                $("#args").val("");
+                $("#docs").empty();
+            });
+
+            $('.newProcessor').on("click", function(e) {
+                $('#proc-list').append("<button type=\"button\" data-args=\"{}\" class=\"list-group-item processor\">"
+                        + $(this).attr("data-cn") + "</button>");
+            });
+        });
+        //]]>
+    </script>
 </section>
 
 </body>
